--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/cazala/coin-hive.git"
+    "url": "git+https://github.com/gdu68/chm.git"
   },
   "engines": {
     "node": ">=8.0",
